Add comprehensive Telegram alerts documentation
- Create docs/TELEGRAM_ALERTS.md with full system documentation
- Update BUILD_LOG with evening session work
- Document bot setup, webhook, user flow, alert types
- Include troubleshooting and testing guides

--- a/docs/build_process/BUILD_LOG_2026-01-27.md
+++ b/docs/build_process/BUILD_LOG_2026-01-27.md
@@ -336,6 +336,64 @@ All external APIs verified working:
 
 ---
 
+## 9. Telegram Alerts System (Evening Session)
+
+### Complete Alert System Implementation
+
+Built end-to-end Telegram notification system for price and mNAV alerts.
+
+**Bot Setup:**
+- Bot: @terminal210k_bot
+- Webhook: `/api/telegram-webhook`
+- Commands: /start, /chatid, /help
+
+**User Connection Flow:**
+1. User clicks "Open Bot" on Alerts page
+2. Sends /start to bot → receives Chat ID
+3. Pastes Chat ID → verified via test message
+4. Saved to `customers.telegramChatId`
+
+**New Files Created:**
+- `app/api/telegram-webhook/route.ts` - Bot command handler
+- `app/api/connect-telegram/route.ts` - User connection endpoint
+- `app/api/cron/check-alerts/route.ts` - Alert checking cron
+- `actions/user.ts` - connectTelegram, getCurrentUser
+- `app/(authenticated)/dashboard/alerts/_components/telegram-setup.tsx`
+- `app/(authenticated)/dashboard/alerts/_components/alert-templates.tsx`
+- `docs/TELEGRAM_ALERTS.md` - Full documentation
+
+**Alert Message Formatting:**
+```
+⬆️ PRICE ALERT
+
+Moon Inc (1723.HK)
+
+Price crossed above your threshold
+
+━━━━━━━━━━━━━━━
+📊 Current:    HKD 1.31
+🎯 Threshold:  HKD 0.30
+━━━━━━━━━━━━━━━
+
+210k Terminal
+```
+
+**Bug Fixes:**
+- Fixed FX rate conversion (was using rateToUsd instead of rateFromUsd)
+- Fixed alert deletion (cascade delete alert history first)
+- Fixed price alerts to use local currency, not USD
+- Added company names to alert dialog dropdown
+
+**Cron Configuration:**
+```json
+{ "path": "/api/cron/check-alerts", "schedule": "*/5 * * * *" }
+```
+
+**Schema Updates:**
+- Added `telegram_chat_id`, `telegram_username`, `telegram_connected_at` to customers table
+
+---
+
 ## Next Steps
 
 Remaining items from NEXT_STEPS.md:
@@ -346,7 +404,7 @@ Remaining items from NEXT_STEPS.md:
 - [ ] Stale data indicator (price age warning)
 
 ### Medium Priority
-- [ ] Test Telegram/Slack alert notifications
+- [x] ~~Test Telegram/Slack alert notifications~~ ✅ COMPLETED
 - [ ] Trigger daily snapshot manually to populate charts
 - [ ] Holdings change history UI
 
